sfexam/sfexam_step1/force-app/main/default/objects/SF_Exam__c/SF_Exam__c.object-meta.xml
<CustomObject>
    <label>SF認定試験</label>
    <nameField>
        <label>SF認定試験名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>