sfexam/sfexam_step1/force-app/main/default/objects/SF_Exam__c/fields/GuidePDF__c.field-meta.xml
<CustomField>
    <fullName>GuidePDF__c</fullName>
    <label>試験ガイド(PDF)</label>
    <type>Url</type>
</CustomField>