sfexam/sfexam_step1/force-app/main/default/objects/SF_Exam__c/fields/NumOfExamHolderPDF__c.field-meta.xml
<CustomField>
    <fullName>NumOfExamHolderPDF__c</fullName>
    <label>資格取得者数(PDF)</label>
    <type>Url</type>
</CustomField>