sfexam/sfexam_step1/force-app/main/default/objects/SF_Exam__c/fields/Passing_Score__c.field-meta.xml
<CustomField>
    <fullName>Passing_Score__c</fullName>
    <label>合格点</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>