sfexam/sfexam_step1/force-app/main/default/objects/SF_Exam__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>受験料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>