sfexam/sfexam_step1/force-app/main/default/objects/SF_Exam__c/fields/Professional__c.field-meta.xml
<CustomField>
    <fullName>Professional__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Professional試験の場合はチェックしてください</description>
    <label>Professional</label>
    <type>Checkbox</type>
</CustomField>