sfexam/sfexam_step1/force-app/main/default/objects/SF_Exam__c/fields/RetakePrice__c.field-meta.xml
<CustomField>
    <fullName>RetakePrice__c</fullName>
    <label>再受験料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>