sfexam/sfexam_step1/force-app/main/default/objects/SF_Exam__c/fields/TestingTime__c.field-meta.xml
<CustomField>
    <fullName>TestingTime__c</fullName>
    <label>試験時間</label>
    <required>true</required>
    <type>Time</type>
</CustomField>