sfexam/sfexam_step1/force-app/main/default/objects/SF_Exam__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ShortName__c</columns>
    <columns>Passing_Score__c</columns>
    <columns>TestingTime__c</columns>
    <columns>Professional__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>